--- a/animus/src/app/show/main-page/main-page.component.html
+++ b/animus/src/app/show/main-page/main-page.component.html
@@ -2,7 +2,7 @@
     <div class="contain">
         <nav class="navbar navbar-expand-lg">
             <div class="navbar-brand">
-                <img src="/chemin/vers/votre-logo.png" class="img-fluid w-100" alt="animusLogo" />
+                <h2 class="logo" [routerLink]="['/main-page']">ANIMUS</h2>
             </div>
             <button type="button" id="btnBars" data-bs-toggle="offcanvas" data-bs-target="#sideCanvas"><i class="fas fa-bars"></i></button>
             <div class="navbar-nav">
