--- a/animus/src/app/show/show-console-page/show-console-page.component.html
+++ b/animus/src/app/show/show-console-page/show-console-page.component.html
@@ -2,7 +2,7 @@
     <div class="contain">
         <nav class="navbar navbar-expand-lg">
             <div class="navbar-brand">
-                <img src="" class="img-fluid w-100" alt="animusLogo" [routerLink]="['/main-page']"/>
+                <h2 class="logo" [routerLink]="['/main-page']">ANIMUS</h2>
             </div>
             <button type="button" id="btnBars" data-bs-toggle="offcanvas" data-bs-target="#sideCanvas"><i class="fas fa-bars"></i></button>
             <div class="navbar-nav">
@@ -59,16 +59,16 @@
             <h2 class="exclusif">LES JEUX EXCLUSIFS :</h2>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 game">
-                    <img [src]="worldDetails.firstGame" class="img-fluid w-100" alt="gameOne" />
+                    <img [src]="worldDetails.firstGame" class="img-fluid w-100" alt="gameOne" appShow/>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 game">
-                    <img [src]="worldDetails.secondGame" class="img-fluid w-100" alt="gameOne" />
+                    <img [src]="worldDetails.secondGame" class="img-fluid w-100" alt="gameOne" appShow/>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 game">
-                    <img [src]="worldDetails.thirdGame" class="img-fluid w-100" alt="gameOne" />
+                    <img [src]="worldDetails.thirdGame" class="img-fluid w-100" alt="gameOne" appShow/>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 game">
-                    <img [src]="worldDetails.fourGame" class="img-fluid w-100" alt="gameOne" />
+                    <img [src]="worldDetails.fourGame" class="img-fluid w-100" alt="gameOne" appShow/>
                 </div>
             </div>
             <button type="button" id="btnSeeGames"><a href="#" class="hrefGames">VOIR LES JEUX</a></button>
